# campus-track

./: .gitignore  app.py  pyproject.toml  requirements.txt
auth/: login.py
config/: settings.py
static/css/: style.css
static/js/: dasboard.js  main.js  search.js
templates/: dashboard.html  demo_cam.html  login.html  search.html  upload.html
tracking/: database.py  detector.py  reid.py
video/: demo_cam.py  processor.py  uploader.py
