[build-system]
requires = ["setuptools >= 42.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-track"
version = "1.0.0"
description = "Multi-camera person tracking system for hackathon"
authors = [{name = "Your Name", email = "your.email@cuchd.in"}]
dependencies = [
    "Flask==2.3.3",
    "face-recognition==1.3.0",
    "opencv-python==4.8.1.78",
    "numpy==1.26.0",
    "Pillow==10.0.1",
    "dlib==19.24.2"
]

[project.urls]
Homepage = "https://github.com/rittik-135/campus-track"
Bug Tracker = "https://github.com/rittik-135/campus-track/issues"